View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0031193 | Open CASCADE | OCCT:Visualization | public | 2019-11-25 11:39 | 2020-12-02 17:12 |
Reporter | nds | Assigned To | mzernova | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.3.0 | ||||
Target Version | 7.5.0 | Fixed in Version | 7.5.0 | ||
Summary | 0031193: Visualization - OpenGl_Flipping wrong text position if local transformation set | ||||
Description | Rotating scene shows the text in not correct position if the presentation has local transformation and the flipping mode is switch ON. | ||||
Steps To Reproduce | bugs/vis/bug31193 | ||||
Tags | No tags attached. | ||||
Test case number | bugs/vis/bug31193 | ||||
|
Branch CR31193 has been created by mzernova. SHA-1: 770c33a86e90ef311db9fb47fb828eafdcdb98ca Detailed log of new commits: Author: mzernova Date: Tue Apr 28 00:43:16 2020 +0300 fix matrix in OpenGL_Flipping bugs/vis/bug31193: test case added Author: nds Date: Tue Aug 27 08:26:23 2019 +0300 0031193: Visualization - OpenGl_Flipping wrong text position if local transformation set (cherry picked from commit 05ac0c7d75356573c725745bc19fab512a4bdad6) |
|
Branch CR31193_1 has been created by mzernova. SHA-1: 0f2bde20291de58e6971d8180ed3db92418054d5 Detailed log of new commits: Author: nds Date: Tue Aug 27 08:26:23 2019 +0300 0031193: Visualization - OpenGl_Flipping wrong text position if local transformation set Fix local transformation in OpenGl_Text if flag HasOwnAnchorPoint() is equal to Standard_False. Fix matrix in OpenGL_Flipping bugs/vis/bug31193: test case added |
|
http://jenkins-test-12.nnov.opencascade.com:8080/view/CR31193-master-mzernova/ |
|
The patch CR31193 is ready to review |
|
> Fix local transformation in OpenGl_Text if flag HasOwnAnchorPoint() is equal to Standard_False. > Fix matrix in OpenGL_Flipping Could you please correct git message to elaborate how exactly both issues have been corrected (what kind of logic error existed in old code)? |
|
Branch CR31193_1 has been updated forcibly by mzernova. SHA-1: 29893a172fc98ce7f4690f9096c7f0816e477173 |
|
Branch CR31193 has been updated by mzernova. SHA-1: f89107ae1d082e546668c7f4ff771436899d7bc1 Detailed log of new commits: Author: mzernova Date: Wed Apr 29 14:22:28 2020 +0300 Before the patch, if the values of the isReversedX/Y/Z variables were set to false, then the WorldView matrix did not change and local transformation was not applied, which caused errors. In order to correctly set the local transformation in case the text does not have its own attach point, the local transformation is set in OpenGl_Text, and the ModelWorld matrix is changed in OpenGl_Flipper, instead of the WorldView matrix. In this case, local transformation will always be applied. |
|
The patch CR31193 is ready to review |
|
> bugs/vis/bug31193: test case added Test case has been lost in patch. |
|
Branch CR31193 has been updated by mzernova. SHA-1: 1ca82d34e296d2942e09ec749b73f01c62bfa235 Detailed log of new commits: Author: mzernova Date: Wed Apr 29 14:39:51 2020 +0300 bugs/vis/bug31193: test case added |
|
Branch CR31193_1 has been updated forcibly by mzernova. SHA-1: 9ab9c59907247df5bce62d2baf0704bb6fb55ce0 |
|
The patch CR31193 is ready to review |
|
Please also attach screenshots for test case before and after the fix, to make it clean how wrong and correct look alike. |
|
bug31193_wrong.png (7,286 bytes) |
|
bug31193_correct.png (7,236 bytes) |
|
+set mouse_pick {208 301} +set mouse_drag {198 102} +vmoveto {*}$mouse_pick +vmanipulator m -startTransform {*}$mouse_pick +vmanipulator m -transform {*}$mouse_drag +vmanipulator m -stopTransform Why such complexity with vmanipulator is needed? Cannot be it replaced by a single vlocation call? |
|
Branch CR31193 has been updated by mzernova. SHA-1: 06069a6f20e14370db6ec19d6cf02f51b893af01 Detailed log of new commits: Author: mzernova Date: Wed Apr 29 16:30:11 2020 +0300 remarks from kgv |
|
Branch CR31193_1 has been updated forcibly by mzernova. SHA-1: ab9e277f15988c69343b64ac487163b41ec120f4 |
|
Please raise the patch in OCCT branch CR31193. |
|
Combination - OCCT branch : WEEK-18 master SHA - b40cdc2b5584fdf78f90594a3c7469213c7dc4a6 a206de37fbfa0bf71bd534ae47192bbec23b8522 Products branch : WEEK-18 SHA - f3160246a8ae8356b116065842ce354791652bb4 was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 17165.480000000167 / 17147.810000000212 [+0.10%] Products Total CPU difference: 11271.100000000095 / 11280.480000000087 [-0.08%] Windows-64-VC14: OCCT Total CPU difference: 18654.578125 / 18665.890625 [-0.06%] Products Total CPU difference: 13128.59375 / 13209.109375 [-0.61%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR31193_1 has been deleted by inv. SHA-1: ab9e277f15988c69343b64ac487163b41ec120f4 |
|
Branch CR31193 has been deleted by inv. SHA-1: 06069a6f20e14370db6ec19d6cf02f51b893af01 |
occt: master ab9e277f 2019-08-27 05:26:23 Committer: mzernova Details Diff |
0031193: Visualization - OpenGl_Flipping wrong text position if local transformation set Before the patch, if the values of the isReversedX/Y/Z variables were set to false, then the WorldView matrix did not change and local transformation was not applied, which caused errors. In order to correctly set the local transformation in case the text does not have its own attach point, the local transformation is set in OpenGl_Text, and the ModelWorld matrix is changed in OpenGl_Flipper, instead of the WorldView matrix. In this case, local transformation will always be applied. bugs/vis/bug31193: test case added |
Affected Issues 0031193 |
|
mod - src/AIS/AIS_TextLabel.cxx | Diff File | ||
mod - src/AIS/AIS_TextLabel.hxx | Diff File | ||
mod - src/OpenGl/OpenGl_Flipper.cxx | Diff File | ||
mod - src/OpenGl/OpenGl_Text.cxx | Diff File | ||
mod - src/ViewerTest/ViewerTest_ObjectCommands.cxx | Diff File | ||
add - tests/bugs/vis/bug31193 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2019-11-25 11:39 | nds | New Issue | |
2019-11-25 11:39 | nds | Assigned To | => nds |
2019-11-25 11:39 | nds | Relationship added | related to 0030922 |
2020-04-29 00:56 | git | Note Added: 0091833 | |
2020-04-29 00:56 | git | Note Added: 0091834 | |
2020-04-29 12:28 | mzernova | Note Added: 0091851 | |
2020-04-29 12:31 | mzernova | Note Added: 0091852 | |
2020-04-29 12:31 | mzernova | Assigned To | nds => kgv |
2020-04-29 12:31 | mzernova | Status | new => resolved |
2020-04-29 12:31 | mzernova | Steps to Reproduce Updated | |
2020-04-29 13:36 | kgv | Note Added: 0091861 | |
2020-04-29 13:36 | kgv | Assigned To | kgv => mzernova |
2020-04-29 13:36 | kgv | Status | resolved => assigned |
2020-04-29 14:20 | git | Note Added: 0091862 | |
2020-04-29 14:22 | git | Note Added: 0091863 | |
2020-04-29 14:22 | mzernova | Note Added: 0091864 | |
2020-04-29 14:22 | mzernova | Assigned To | mzernova => kgv |
2020-04-29 14:22 | mzernova | Status | assigned => resolved |
2020-04-29 14:22 | kgv | Note Added: 0091865 | |
2020-04-29 14:23 | kgv | Assigned To | kgv => mzernova |
2020-04-29 14:23 | kgv | Status | resolved => assigned |
2020-04-29 14:40 | git | Note Added: 0091866 | |
2020-04-29 14:41 | git | Note Added: 0091867 | |
2020-04-29 14:42 | mzernova | Note Added: 0091868 | |
2020-04-29 14:42 | mzernova | Assigned To | mzernova => kgv |
2020-04-29 14:42 | mzernova | Status | assigned => resolved |
2020-04-29 14:44 | kgv | Note Added: 0091869 | |
2020-04-29 14:56 | mzernova | File Added: bug31193_wrong.png | |
2020-04-29 15:00 | mzernova | File Added: bug31193_correct.png | |
2020-04-29 15:09 | kgv | Note Added: 0091870 | |
2020-04-29 16:35 | git | Note Added: 0091873 | |
2020-04-29 16:36 | git | Note Added: 0091874 | |
2020-04-29 16:41 | kgv | Note Added: 0091876 | |
2020-04-29 16:41 | kgv | Assigned To | kgv => bugmaster |
2020-04-29 16:41 | kgv | Status | resolved => reviewed |
2020-04-29 16:41 | kgv | Product Version | => 7.3.0 |
2020-05-07 10:50 | bugmaster | Note Added: 0091978 | |
2020-05-07 10:50 | bugmaster | Status | reviewed => tested |
2020-05-07 10:52 | bugmaster | Test case number | => bugs/vis/bug31193 |
2020-05-10 14:01 | mzernova | Changeset attached | => occt master ab9e277f |
2020-05-10 14:01 | mzernova | Assigned To | bugmaster => mzernova |
2020-05-10 14:01 | mzernova | Status | tested => verified |
2020-05-10 14:01 | mzernova | Resolution | open => fixed |
2020-05-10 14:16 | git | Note Added: 0092048 | |
2020-05-10 14:17 | git | Note Added: 0092049 | |
2020-12-02 16:41 | emo | Fixed in Version | => 7.5.0 |
2020-12-02 17:12 | emo | Status | verified => closed |